--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postinstall": "patch-package",
     "package": "npm run build && cd build && zip -r ../extension.zip . && cd ..",
     "clean": "rm -rf build && mkdir build",
-    "lint": "eslint src/**/*.js --fix"
+    "lint": "eslint src/**/*.js --fix",
+    "knip": "knip"
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.27.1",
@@ -50,7 +51,6 @@
     "react-shadow": "^20.0.0",
     "react-svg": "^16.1.18",
     "ssestream": "^1.1.0",
-    "wavesurfer.js": "^7.4.2",
     "webm-duration-fix": "^1.0.4"
   },
   "devDependencies": {
@@ -59,6 +59,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.27.1",
     "@types/chrome": "^0.1.29",
+    "@types/node": "^24.10.1",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "babel-loader": "^9.1.3",
@@ -69,6 +70,7 @@
     "fs-extra": "^10.1.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "knip": "^5.70.2",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.2.0",
@@ -76,7 +78,8 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.4",
+    "webpack": "^5.103.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.11.1"
   }
